--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(RayTracingInOneWeekend)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RayTracingInOneWeekend main.cpp vec3.h color.h ray.h hittable.h sphere.h)
+add_executable(RayTracingInOneWeekend main.cpp vec3.h color.h ray.h hittable.h sphere.h hittable_list.h)
